=== Version 0.0.4
* Enhancements


=== Version 0.0.3 / 2011-06-02
* Enhancements
  * Added support for the following elements
    * span
    * image
    
  * Added the following methods to Element
    * value
    * ==
    * tag_name
    * attribute
    * click
  
  * Updated to use selenium-webdriver 0.2.1
  
  * Updated to use watir-webdriver 0.2.4

=== Version 0.0.2 / 2011-05-30
* Enhancements
  * Added support for the following elements
    * div
    * button
    * table
    * table row
    * table cell
    
  * Added text method to element

=== Version 0.0.1 / 2011-05-22
* Enhancements
  * Support for the following elements
    * check box
    * link
    * radio button
    * select list
    * text field
  
  * Support for the following page level functions
    * text
    * html
    * title