@@ -10,6 +10,10 @@
     <input id="text_field_id" name="text_field_name" class="text_field_class" 
            size="40" type="text" />
 
+     <h3>Text Field</h3>
+     <input id="hidden_field_id" name="hidden_field_name" class="hidden_field_class" 
+            size="40" type="hidden" value="12345" />
+
     <h3>Select List</h3>
     <select name="sel_list_name" id="sel_list_id", class="sel_list_class">
       <option value="option1">Test 1</option>
