@@ -12,3 +12,4 @@ require 'page-object/elements/table_cell'
 require 'page-object/elements/table_row'
 require 'page-object/elements/span'
 require 'page-object/elements/image'
+require 'page-object/elements/hidden_field'
