@@ -6,7 +6,6 @@ module PageObject
       # Return the width of the image.
       #
       def width
-        dimension = @element.size
         dimension.width
       end
       
@@ -14,8 +13,13 @@ module PageObject
       # Return the height of the image
       #
       def height
-        dimension = @element.size
         dimension.height
+      end
+      
+      private
+      
+      def dimension
+        @element.size
       end
     end
   end
