@@ -1,6 +1,7 @@
 === Version 0.0.4
 * Enhancements
-
+  * Added support for the following elements
+    * hidden field
 
 === Version 0.0.3 / 2011-06-02
 * Enhancements
